--- a/flatteningScript/flatten_SBMLmodels.ipynb
+++ b/flatteningScript/flatten_SBMLmodels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d945378c",
    "metadata": {},
    "outputs": [],
@@ -11,17 +11,38 @@
     "from libsbml import *\n",
     "import sys, getopt, os.path\n",
     "from tqdm import tqdm\n",
-    "import zipfile"
+    "import zipfile\n",
+    "import tempfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7271c3ad",
+   "execution_count": 12,
+   "id": "cb30d8b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<TemporaryDirectory './tmp67vewp2a'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create temporary directory\n",
+    "tempfile.tempdir = \"./\"\n",
+    "temp_dir = tempfile.TemporaryDirectory()\n",
+    "print(temp_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f2948400",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exemplary file\n",
     "omexFile = \"SARS-CoV-2_CoreModelsBALF1Epithelial.omex\"\n",
     "sbmlPath = omexFile.replace(\".omex\",\"\")\n",
     "flattenedPath = omexFile.replace(\".omex\",\"_flattened\")"
@@ -29,20 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "948da9f9",
+   "execution_count": 7,
+   "id": "71a5c34b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# unzip OMEX file of interest\n",
+    "# unzip OMEX file of interest in a temporary file\n",
     "with zipfile.ZipFile(omexFile, 'r') as zip_ref:\n",
-    "    zip_ref.extractall(sbmlPath)"
+    "    zip_ref.extractall(temp_dir.name+\"/\"+sbmlPath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "14fdcdbf",
+   "execution_count": 8,
+   "id": "ade438f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +73,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "681f062b",
+   "execution_count": 9,
+   "id": "b9e80417",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C149_C149_ACATCAGGTCGGGTCT-1_16782925330367706634.sbml Flattening.... OK\n",
+      "C148_C148_AGCTCCTCACGAAACG-1_1152717062397344256.sbml Flattening.... OK\n"
+     ]
+    }
+   ],
    "source": [
-    "# convert hierarchical models defined with the Hierarchical Model Composition package into a \"flattened\" version\n",
+    "# convert hierarchical models defined with the SBML Level 3 Hierarchical Model Composition package \n",
+    "# into a \"flattened\" version\n",
     "\n",
-    "for model in os.listdir(sbmlPath):\n",
+    "for model in os.listdir(temp_dir.name+\"/\"+sbmlPath):\n",
     "    \n",
-    "    sbmldoc = readSBML(sbmlPath+\"/\"+model)\n",
+    "    sbmldoc = readSBML(temp_dir.name+\"/\"+sbmlPath+\"/\"+model)\n",
     "    \n",
     "    # define converter options\n",
     "    props = ConversionProperties()\n",
@@ -81,22 +112,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36aae556",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "id": "5d671606",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'' is not a valid SBML 'SId'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C148_C148_AGCTCCTCACGAAACG_1_1152717062397344256 ID correction.... OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'' is not a valid SBML 'SId'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C149_C149_ACATCAGGTCGGGTCT_1_16782925330367706634 ID correction.... OK\n"
+     ]
+    }
+   ],
    "source": [
-    "# read with cobrapy\n",
-    "for flatObj in tqdm(os.listdir(flattenedPath)):\n",
+    "# correct error: '' is not a valid SBML 'SId'.\n",
+    "for flatObj in os.listdir(flattenedPath):\n",
     "    \n",
     "    model = io.read_sbml_model(flattenedPath+\"/\"+flatObj)\n",
     "    \n",
-    "    # Solve error: '' is not a valid SBML 'SId'.\n",
+    "    # Solve problem: '' is not a valid SBML 'SId'.\n",
     "    model.id = str(flatObj).replace(\".xml\",\"\").replace(\"-\",\"_\")\n",
     "    \n",
     "    print(model.id, \"ID correction.... OK\")\n",
     "    \n",
+    "    # write corrected model (overwrite)\n",
     "    io.write_sbml_model(model,flattenedPath+\"/\"+flatObj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "48fb3966",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete temporary file\n",
+    "temp_dir.cleanup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2417919",
+   "metadata": {},
+   "source": [
+    "### The final models can be used with any COBRApy or COBRAToolbox function."
    ]
   }
  ],
