--- a/flatteningScript/flatten_SBMLmodels.ipynb
+++ b/flatteningScript/flatten_SBMLmodels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d945378c",
    "metadata": {},
    "outputs": [],
@@ -17,28 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cb30d8b9",
+   "execution_count": 9,
+   "id": "f7ab20dd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<TemporaryDirectory './tmp67vewp2a'>\n"
+      "/var/folders/qw/d0k49gb55ss0dr66vvs929d00000gn/T/tmp2an1jwt7\n"
      ]
     }
    ],
    "source": [
     "# create temporary directory\n",
-    "tempfile.tempdir = \"./\"\n",
     "temp_dir = tempfile.TemporaryDirectory()\n",
-    "print(temp_dir)"
+    "tmp_path = temp_dir.name\n",
+    "print(tmp_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "f2948400",
    "metadata": {},
    "outputs": [],
@@ -50,30 +50,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "71a5c34b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# unzip OMEX file of interest in a temporary file\n",
     "with zipfile.ZipFile(omexFile, 'r') as zip_ref:\n",
-    "    zip_ref.extractall(temp_dir.name+\"/\"+sbmlPath)"
+    "    zip_ref.extractall(tmp_path+\"/\"+sbmlPath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "ade438f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# create directory to store results\n",
-    "os.mkdir(flattenedPath)"
+    "os.mkdir(tmp_path+\"/\"+flattenedPath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "b9e80417",
    "metadata": {},
    "outputs": [
@@ -81,8 +81,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C149_C149_ACATCAGGTCGGGTCT-1_16782925330367706634.sbml Flattening.... OK\n",
-      "C148_C148_AGCTCCTCACGAAACG-1_1152717062397344256.sbml Flattening.... OK\n"
+      "C149_C149_ACATCAGGTCGGGTCT-1_16782925330367706634.sbml Flattening....OK\n",
+      "C148_C148_AGCTCCTCACGAAACG-1_1152717062397344256.sbml Flattening....OK\n",
+      "C142_C142_CTCGTACCAAGGCTCC-1_9190006314646995726.sbml Flattening....OK\n"
      ]
     }
    ],
@@ -90,9 +91,9 @@
     "# convert hierarchical models defined with the SBML Level 3 Hierarchical Model Composition package \n",
     "# into a \"flattened\" version\n",
     "\n",
-    "for model in os.listdir(temp_dir.name+\"/\"+sbmlPath):\n",
+    "for model in os.listdir(tmp_path+\"/\"+sbmlPath):\n",
     "    \n",
-    "    sbmldoc = readSBML(temp_dir.name+\"/\"+sbmlPath+\"/\"+model)\n",
+    "    sbmldoc = readSBML(tmp_path+\"/\"+sbmlPath+\"/\"+model)\n",
     "    \n",
     "    # define converter options\n",
     "    props = ConversionProperties()\n",
@@ -105,14 +106,14 @@
     "        raise SystemExit(\"Conversion failed... %tb\")\n",
     "        \n",
     "    writer  = SBMLWriter()\n",
-    "    writer.writeSBML(sbmldoc, flattenedPath+\"/\"+model.replace(\".sbml\",\".xml\"))\n",
+    "    writer.writeSBML(sbmldoc, tmp_path+\"/\"+flattenedPath+\"/\"+model.replace(\".sbml\",\".xml\"))\n",
     "    \n",
-    "    print(model, \"Flattening.... OK\")\n"
+    "    print(model, \"Flattening....OK\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "5d671606",
    "metadata": {
     "scrolled": true
@@ -129,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C148_C148_AGCTCCTCACGAAACG_1_1152717062397344256 ID correction.... OK\n"
+      "C148_C148_AGCTCCTCACGAAACG_1_1152717062397344256 ID correction....OK\n"
      ]
     },
     {
@@ -143,42 +144,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C149_C149_ACATCAGGTCGGGTCT_1_16782925330367706634 ID correction.... OK\n"
+      "C149_C149_ACATCAGGTCGGGTCT_1_16782925330367706634 ID correction....OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'' is not a valid SBML 'SId'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C142_C142_CTCGTACCAAGGCTCC_1_9190006314646995726 ID correction....OK\n"
      ]
     }
    ],
    "source": [
     "# correct error: '' is not a valid SBML 'SId'.\n",
-    "for flatObj in os.listdir(flattenedPath):\n",
+    "for flatObj in os.listdir(tmp_path+\"/\"+flattenedPath):\n",
     "    \n",
-    "    model = io.read_sbml_model(flattenedPath+\"/\"+flatObj)\n",
+    "    model = io.read_sbml_model(tmp_path+\"/\"+flattenedPath+\"/\"+flatObj)\n",
     "    \n",
     "    # Solve problem: '' is not a valid SBML 'SId'.\n",
     "    model.id = str(flatObj).replace(\".xml\",\"\").replace(\"-\",\"_\")\n",
     "    \n",
-    "    print(model.id, \"ID correction.... OK\")\n",
+    "    print(model.id, \"ID correction....OK\")\n",
     "    \n",
     "    # write corrected model (overwrite)\n",
-    "    io.write_sbml_model(model,flattenedPath+\"/\"+flatObj)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "48fb3966",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# delete temporary file\n",
-    "temp_dir.cleanup()"
+    "    io.write_sbml_model(model,tmp_path+\"/\"+flattenedPath+\"/\"+flatObj)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a2417919",
+   "id": "4424107f",
+   "metadata": {},
+   "source": [
+    "Final models are stored in: **tmp_path/flattenedPath/**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3e59c96",
    "metadata": {},
    "source": [
     "### The final models can be used with any COBRApy or COBRAToolbox function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba738771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete temporary directory if no longer needed\n",
+    "temp_dir.cleanup()"
    ]
   }
  ],
